user/name added to router
