# rails_backend/app/controllers/user_stat_controller.rb
@@ -2,19 +2,21 @@ class UserStatController < ApplicationController
 
   def index
     user_stats = UserStat.all
-    render json: user_stats
+    render json: user_stats, status: :ok
   end
 
   def show
     user_stat = UserStat.find(params[:id])
-    render json: user_stat
+    render json: user_stat, status: :ok
   end
 
-  def create
-    # puts "Creating user stat"
-    # puts params
-    user_stat = UserStat.new(params.require(:user_stat).permit(:wins, :lost, :games_played, :right_guesses, :skips))
-    user_stat.save
+  def update
+    user_stat = UserStat.find(params[:id])
+    if user_stat.update(params.require(:user_stat).permit(:wins, :lost, :games_played, :right_guesses, :skips))
+      render json: user_stat, status: :ok
+    else
+      render json: user_stat.errors, status: :unprocessable_entity
+    end
   end
 
 end
