# rails_backend/config/routes.rb
@@ -2,6 +2,7 @@ Rails.application.routes.draw do
   mount Rswag::Ui::Engine => '/api-docs'
   mount Rswag::Api::Engine => '/api-docs'
 
+  get '/user/:name', to: 'user#show', as: 'user_by_name'
   resources :user_stat
   resources :user
   # Define your application routes per the DSL in https://guides.rubyonrails.org/routing.html
